Fix header navigation alignment

--- a/website/src/css/game.scss
+++ b/website/src/css/game.scss
@@ -33,8 +33,6 @@ header {
 
   nav {
     display: none;
-    align-self: stretch;
-    align-items: center;
   }
 
   &.shown {
